fix: fix overlay disable z-index

--- a/src/core/overlay/_overlay.less
+++ b/src/core/overlay/_overlay.less
@@ -59,6 +59,7 @@
   width: auto;
   height: auto;
   .overlay-container {
+    z-index: initial;
     padding: 0;
     width: 100%;
     min-height: auto;
